ebnf.txt
MidiPascal =
	'PROGRAM' Identifier ';'
	[VariableDeclaration]
	'BEGIN'
		StatementSequence
	'END''.'
	.

VariableDeclaration =
	'VAR' IdentifierList ':' 'INTEGER' ';'.

IdentifierList =
	Identifier [',' IdentifierList].

StatementSequence =
	Statement [';' StatementSequence].

Statement =
	Identifier ':=' Expression
	| 'READ' '(' Identifier ')'
	| 'WRITE' '(' Expression ')'
	| 'IF' Identifier 'THEN' Statement ['ELSE' Statement]
	| 'POLYGLOT' '(' Expression ')'
	| 'WHILE' Identifier 'DO' Statement
	| 'BEGIN' StatementSequence 'END'
	.

Expression =
	Term [('+' | '-') Expression].
Term =
	Factor [('*' | '/') Term].
Factor =
	Identifier
	| number
	| string
	| '(' Expression ')'
	.

Identifier =
	variableName.
